# AIDCIS3-LFS

./: .gitattributes  .gitignore  AIDCIS3_File_Architecture_Analysis.md  AI协同提示词.md  AI编程分阶段实施计划.md  BATCH_MODEL_REMOVAL_SUMMARY.md  BATCH_SYSTEM_SUMMARY.md  BISDM_INTEGRATION_GUIDE.md  BLUE_STATUS_FIX_SUMMARY.md  BLUE_STATUS_FIX_VERIFICATION.md  C042R258_FIX_SUMMARY.md  CLEAN_FIX_SOLUTION.md  CODE_OPTIMIZATION_GUIDE.md  COMPREHENSIVE_TEST_REPORT.md  COORDINATOR_INITIALIZATION_FIX.md  DEPLOYMENT.md  DETECTION_ORDER_FIX_SUMMARY.md  DETECTION_START_ORDER_FIX.md  DUPLICATE_CONTROLLER_FIX_SUMMARY.md  DXF导入功能说明.md  FINAL_FIXES_SUMMARY.md  FINAL_TEST_REPORT.md  FINAL_VERIFICATION_REPORT.md  FIXES_SUMMARY.md  FIX_SUMMARY.md  GUI_TEST_REPORT.md  HIGHLIGHT_SECTOR_ERROR_FIX.md  HOLE_ID_CONVERSION_CHECKLIST.md  HOLE_ID_FORMAT_REFACTOR_PLAN.md  HOLE_ID_REFACTOR_TEST_REPORT.md  INITIAL_VIEW_FIX_SUMMARY_v2.md  INSPECTION_BATCH_MIGRATION_SUMMARY.md  INTEGRATION_TEST_REPORT.md  ISSUE_STATUS.md  LOG_OPTIMIZATION_SUMMARY.md  MAIN_WINDOW_REFACTORING_DESIGN.md  MAIN_WINDOW_TEST_REPORT.md  MICRO_VIEW_FIX_SUMMARY.md  MICRO_VIEW_ZOOM_ANALYSIS.md  MIGRATION_GUIDE.md  (+268 more)
.claude/: ._settings.local.json  settings.local.json
.github/workflows/: ._ci.yml  ._release.yml  release.yml
AIDCIS3-LFS-master/: .gitattributes  AUTOMATION_WORKER_RESTORATION_REPORT.md  COMM_STATUS_LABEL_FIX_REPORT.md  GIT_LFS_UPLOAD_REPORT.md  README.md  UI_RESTORATION_REPORT.md  detection_system.db  simple_test.py
AIDCIS3-LFS-master/config/: requirements.txt
AIDCIS3-LFS-master/docs/: REALTIME_MONITORING_RESTORATION_REPORT.md
AIDCIS3-LFS-master/src/: main_window.py  main_window.py.backup_20250726_enhanced  main_window_aggregator.py  run_main_window.py  start_main_window.py
AIDCIS3-LFS-master/trash/: info_panel.py  rotation_config.py  sector_manager.py  sector_manager_adapter.py
Archive/: archive_index.json
Archive/H00001/: 2-7.0.txt  archive_metadata.json
Data/: .gitignore  README.md  detection_system.db
PySide6_Project_Shared_Context/: 03_file_map.md  04_api_contracts.md  11_feature_map.md  12_prompt_library.md
aidcis2/data_management/: hybrid_manager.py
aidcis2/graphics/: __init__.py  navigation.py
aidcis2/integration/: dxf_integration_manager.py  legacy_dxf_loader.py
assets/: ._old
assets/old/: ._history  ._hole_id_mapper.py  hole_id_mapper.py  pdf_report_generator.py  report_models.py  src_main_window.py
clash/: CLASH_README.md  Rp1E2KpdmfFS.yaml  SUBSCRIPTION_HELP.md  import_config.py  manual_config.py  setup_clash_config.py  start_clash.sh  stop_clash.sh  switch_proxy.py  update_subscription.py
config/: defect_categories.json  path_config.json  test_config.yaml
docs/: ._analysis  ._api  ._architecture  ._examples  ._fixes  ._guides  ._planning  ._refactoring  ._reports  ._technical  3.1界面二维公差带包络图完成说明.md  3.1界面单个坐标图修改完成说明.md  3.1界面直径圆分析功能完成说明.md  DXF_Integration_Workflow.md  FILE_ORGANIZATION.md  FLOATING_PANORAMA_TEST_DOCUMENTATION.md  GitHub上传数据文件指南.md  Git_LFS_协同工作指南.md  PROJECT_CLEANUP_REPORT.md  PROJECT_ORGANIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  Quick_Start_Guide.md  README.md  Technical_Implementation_Guide.md  UI修改说明.md  UI界面拟合圆修复完成说明.md  main_window_refactoring_summary.md  manual_github_setup.md  multi_csv_import_summary.md  simulation_rendering_logic.md  三维模型图例显示修复说明.md  任务清单.md  公差线代码删除完成总结.md  兼容性问题修复总结.md  四个拟合圆图表功能完成总结.md  团队协作最佳实践.md  安装运行指南.md  完整功能使用说明.md  布局优化完成总结.md  布局修正完成说明.md  (+14 more)
docs/Demands/: 20250716 李老师任务分配_副本.md
docs/PySide6_Context/: 01_mandate.md  02_blueprint.md  05_data_models_formats.md  06_dev_ops.md  07_coding_rules.md  08_task_context.md  09_core_workflows.md  10_health_dashboard.md  Meta_prompt.md  README.md  psc_hub.md.md
docs/analysis/: ._PANORAMA_PACKAGE_SUMMARY.md  ._PANORAMA_REFACTOR_ANALYSIS.md  ._REALTIME_CHART_PACKAGE_SUMMARY.md  ._data_flow_diagrams.md  ._dxf_renderer_implementation_analysis.md  ._dxf_rendering_flow_diagram.md  ._dynamic_sector_integration_guide.md  ._dynamic_sector_versions_comparison.md  ._dynamic_sector_view_complete_analysis.md  ._performance_report.md  (+30 more)
hardware/: __init__.py
merge/: integration_tests.md  system_tests.md
modules/: annotation_tool.py  defect_annotation_tool.py  endoscope_view.py  image_scanner.py  realtime_chart.py  realtime_chart.py.timing_backup
old/: main_detection_view.py
project_archive/: complete_cleanup_report.md
reports/: ._CAP1000_report.txt  CAP1000_report.txt  report_history.json  test_report_WP-2025-001.json
scripts/: ._analysis  ._debug  ._fixes  ._tests  ._verification  backup_before_conversion.py  convert_hole_ids.py  migrate_directory_structure.py  migrate_hole_ids.py  migration_utils.py  validate_id_conversion.py  version_migration.py
src/: .___init__.py  ._config  ._logs  ._main_window.py  ._main_window_aggregator.py  ._pages  ._shared  ._version.py  debug_panorama_update.py  detection_system.db  force_dark_theme.py  main.py  main_window.py  main_window.py.comprehensive_backup  main_window_aggregator.py  main_window_backup_with_v2.py  panorama_sync_integration.py  version.py  第二级界面美化3.md
templates/: ._reports
test_archive/: organization_report.md
tests/: ._archive  ._integration  ._manual  ._unit  README_FLOATING_PANORAMA_TESTS.md  README_TESTING.md  __init__.py  base_test_case.py  conftest.py  run_all_report_tests.py  run_core_tests.py  run_floating_panorama_tests.py  run_main_window_tests.py  run_panorama_sync_tests.py  run_priority3_phase1_tests.py  run_priority3_phase2_tests.py  run_priority3_phase3_tests.py  run_report_tests_simple.py  run_sector_tests.py  test_config.ini  test_p2_realtime_monitoring.py  test_p2_simple.py  test_plan.md
trash/: P_PAGES_CLEANUP_SUMMARY.md  adaptive_scale_manager.py  dynamic_sector_manager.py  dynamic_sector_overview.py  enhanced_sector_manager.py  legacy_main_detection_view.py  main_window.py.deprecated_20250726  native_main_detection_view.py  native_main_detection_view_refactored.py  rotation_stub.py  rotation_utils.py  sector_view.py  simple_commands.txt  visualization_panel.py
技术债务/: 250717.md  AI协作重构路线图.md  AI开发提示词指南.md  AI进程同步表.md
(+2312 files in other folders)
